different i logic, game sequence works, plus delay

--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
                         <br>
                         <div id="questionBox"></div>
                         <div id="answerBox">
-                            <button id="btn1"><span id="option1"></span></button>
+                            <button class="button" type="submit" id="btn1" value="1"><span id="option1"></span></button>
                             <br>
                             <br>
-                            <button id="btn2"><span id="option2"></span></button>
+                            <button class="button" type="submit" id="btn2" value="2"><span id="option2"></span></button>
                             <br>
                             <br>
-                            <button id="btn3"><span id="option3"></span></button>
+                            <button class="button" type="submit" id="btn3" value="3"><span id="option3"></span></button>
                             <br>
                             <br>
-                            <button id="btn4"><span id="option4"></span></button>
+                            <button class="button" type="submit" id="btn4" value="4"><span id="option4"></span></button>
                         </div>
                         <div class="row" id="r2">
                           <div class="col-sm-12 text-center" id="button-container">
